--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   url_launcher: ^6.1.10
+  firebase_core: ^2.32.0
+  firebase_auth: ^4.20.0
+  cloud_firestore: ^4.15.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
