--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/drawer_header.png
+    - assets/drawer_header.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
