--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   cloud_firestore: ^4.15.0
   flutter_riverpod: ^2.5.0
   font_awesome_flutter: ^10.8.0
+  flutter_map: ^7.0.2
+  latlong2: ^0.9.1
 
 
 
